<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_face_black_24dp"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_games"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/my_games" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/my_friends" />

    </group>

    <item android:title="@string/connection">
        <menu>
            <item
                android:id="@+id/nav_fb"
                android:icon="@drawable/icons8_facebook"
                android:title="@string/facebook" />
            <item
                android:id="@+id/nav_deco"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/deconnection" />
        </menu>
    </item>

</menu>
